--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                         <h4 class="filter__choosed-title">You choosed</h4>
                         <div class="choosed__item">
                             <span class="choosed__item-text">Men</span>
-                            <button class="choosed__item-x">x</button>
+                            <button class="choosed__item-x">&#128937;</button>
                         </div>
                         <div class="choosed__item">
                             <span class="choosed__item-text">Sport shoes</span>
-                            <button class="choosed__item-x">x</button>
+                            <button class="choosed__item-x">&#128937;</button>
                         </div>
                         <div class="choosed__item">
                             <span class="choosed__item-text">Sport shoes</span>
-                            <button class="choosed__item-x">x</button>
+                            <button class="choosed__item-x">&#128937;</button>
                         </div>
                     </div>
                 </section>
