--- a/index.html
+++ b/index.html
@@ -39,54 +39,54 @@
                 <section class="catalog__filter-gender">
                     <h4 class="gender__title">Gender</h4>
                     <div class="gender__option">
-                        <label for="gender-all" class="gender__option-label">For all</label>
+                        <label for="gender-all" class="gender__option-label option">For all</label>
                         <input type="checkbox" name="gender-all" id="gender-all" class="gender__option-check">
                     </div>
                     <div class="gender__option">
-                        <label for="gender-men" class="gender__option-label">For men</label>
+                        <label for="gender-men" class="gender__option-label option">For men</label>
                         <input type="checkbox" name="gender-men" id="gender-men" class="gender__option-check">
                     </div>
                     <div class="gender__option">
-                        <label for="gender-women" class="gender__option-label">For women</label>
+                        <label for="gender-women" class="gender__option-label option">For women</label>
                         <input type="checkbox" name="gender-women" id="gender-women" class="gender__option-check">
                     </div>
                     <div class="gender__option">
-                        <label for="gender-children" class="gender__option-label">For children</label>
+                        <label for="gender-children" class="gender__option-label option">For children</label>
                         <input type="checkbox" name="gender-children" id="gender-children" class="gender__option-check">
                     </div>
                 </section>
                 <section class="catalog__filter-peculiarities">
                     <h4 class="peculiarities__title">Peculiarities</h4>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-outdoor" class="peculiarities__option-label">Outdoor shoes</label>
+                        <label for="peculiarities-outdoor" class="peculiarities__option-label option">Outdoor shoes</label>
                         <input type="checkbox" name="peculiarities-outdoor" id="peculiarities-outdoor" class="peculiarities__option-check">
                     </div>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-classic" class="peculiarities__option-label">Classic shoes</label>
+                        <label for="peculiarities-classic" class="peculiarities__option-label option">Classic shoes</label>
                         <input type="checkbox" name="peculiarities-classic" id="peculiarities-classic" class="peculiarities__option-check">
                     </div>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-sport" class="peculiarities__option-label">Sport shoes</label>
+                        <label for="peculiarities-sport" class="peculiarities__option-label option">Sport shoes</label>
                         <input type="checkbox" name="peculiarities-sport" id="peculiarities-sport" class="peculiarities__option-check">
                     </div>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-casual" class="peculiarities__option-label">Casual shoes</label>
+                        <label for="peculiarities-casual" class="peculiarities__option-label option">Casual shoes</label>
                         <input type="checkbox" name="peculiarities-casual" id="peculiarities-casual" class="peculiarities__option-check">
                     </div>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-run" class="peculiarities__option-label">Run shoes</label>
+                        <label for="peculiarities-run" class="peculiarities__option-label option">Run shoes</label>
                         <input type="checkbox" name="peculiarities-run" id="peculiarities-run" class="peculiarities__option-check">
                     </div>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-football" class="peculiarities__option-label">Football shoes</label>
+                        <label for="peculiarities-football" class="peculiarities__option-label option">Football shoes</label>
                         <input type="checkbox" name="peculiarities-football" id="peculiarities-football" class="peculiarities__option-check">
                     </div>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-tennis" class="peculiarities__option-label">Tennis shoes</label>
+                        <label for="peculiarities-tennis" class="peculiarities__option-label option">Tennis shoes</label>
                         <input type="checkbox" name="peculiarities-tennis" id="peculiarities-tennis" class="peculiarities__option-check">
                     </div>
                     <div class="peculiarities__option">
-                        <label for="peculiarities-skateboard" class="peculiarities__option-label">Skateboard shoes</label>
+                        <label for="peculiarities-skateboard" class="peculiarities__option-label option">Skateboard shoes</label>
                         <input type="checkbox" name="peculiarities-skateboard" id="peculiarities-skateboard" class="peculiarities__option-check">
                     </div>
                 </section>
