--- a/index.html
+++ b/index.html
@@ -38,56 +38,56 @@
                 </section>
                 <section class="catalog__filter-gender">
                     <h4 class="gender__title">Gender</h4>
-                    <div class="gender__option">
-                        <label for="gender-all" class="gender__option-label option">For all</label>
-                        <input type="checkbox" name="gender-all" id="gender-all" class="gender__option-check">
+                    <div class="gender__option option">
+                        <label for="gender-all" class="gender__option-label option-label">For all</label>
+                        <input type="checkbox" name="gender-all" id="gender-all" class="gender__option-check checkbox">
                     </div>
-                    <div class="gender__option">
-                        <label for="gender-men" class="gender__option-label option">For men</label>
-                        <input type="checkbox" name="gender-men" id="gender-men" class="gender__option-check">
+                    <div class="gender__option option">
+                        <label for="gender-men" id="gender-men-label" class="gender__option-label option-label">For men</label>
+                        <input type="checkbox" name="gender-men" id="gender-men" class="gender__option-check checkbox">
                     </div>
-                    <div class="gender__option">
-                        <label for="gender-women" class="gender__option-label option">For women</label>
-                        <input type="checkbox" name="gender-women" id="gender-women" class="gender__option-check">
+                    <div class="gender__option option">
+                        <label for="gender-women" class="gender__option-label option-label">For women</label>
+                        <input type="checkbox" name="gender-women" id="gender-women" class="gender__option-check checkbox">
                     </div>
-                    <div class="gender__option">
-                        <label for="gender-children" class="gender__option-label option">For children</label>
-                        <input type="checkbox" name="gender-children" id="gender-children" class="gender__option-check">
+                    <div class="gender__option option">
+                        <label for="gender-children" class="gender__option-label option-label">For children</label>
+                        <input type="checkbox" name="gender-children" id="gender-children" class="gender__option-check checkbox">
                     </div>
                 </section>
                 <section class="catalog__filter-peculiarities">
                     <h4 class="peculiarities__title">Peculiarities</h4>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-outdoor" class="peculiarities__option-label option">Outdoor shoes</label>
-                        <input type="checkbox" name="peculiarities-outdoor" id="peculiarities-outdoor" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-outdoor" class="peculiarities__option-label option-label">Outdoor shoes</label>
+                        <input type="checkbox" name="peculiarities-outdoor" id="peculiarities-outdoor" class="peculiarities__option-check checkbox">
                     </div>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-classic" class="peculiarities__option-label option">Classic shoes</label>
-                        <input type="checkbox" name="peculiarities-classic" id="peculiarities-classic" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-classic" class="peculiarities__option-label option-label">Classic shoes</label>
+                        <input type="checkbox" name="peculiarities-classic" id="peculiarities-classic" class="peculiarities__option-check checkbox">
                     </div>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-sport" class="peculiarities__option-label option">Sport shoes</label>
-                        <input type="checkbox" name="peculiarities-sport" id="peculiarities-sport" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-sport" class="peculiarities__option-label option-label">Sport shoes</label>
+                        <input type="checkbox" name="peculiarities-sport" id="peculiarities-sport" class="peculiarities__option-check checkbox">
                     </div>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-casual" class="peculiarities__option-label option">Casual shoes</label>
-                        <input type="checkbox" name="peculiarities-casual" id="peculiarities-casual" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-casual" class="peculiarities__option-label option-label">Casual shoes</label>
+                        <input type="checkbox" name="peculiarities-casual" id="peculiarities-casual" class="peculiarities__option-check checkbox">
                     </div>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-run" class="peculiarities__option-label option">Run shoes</label>
-                        <input type="checkbox" name="peculiarities-run" id="peculiarities-run" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-run" class="peculiarities__option-label option-label">Run shoes</label>
+                        <input type="checkbox" name="peculiarities-run" id="peculiarities-run" class="peculiarities__option-check checkbox">
                     </div>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-football" class="peculiarities__option-label option">Football shoes</label>
-                        <input type="checkbox" name="peculiarities-football" id="peculiarities-football" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-football" class="peculiarities__option-label option-label">Football shoes</label>
+                        <input type="checkbox" name="peculiarities-football" id="peculiarities-football" class="peculiarities__option-check checkbox">
                     </div>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-tennis" class="peculiarities__option-label option">Tennis shoes</label>
-                        <input type="checkbox" name="peculiarities-tennis" id="peculiarities-tennis" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-tennis" class="peculiarities__option-label option-label">Tennis shoes</label>
+                        <input type="checkbox" name="peculiarities-tennis" id="peculiarities-tennis" class="peculiarities__option-check checkbox">
                     </div>
-                    <div class="peculiarities__option">
-                        <label for="peculiarities-skateboard" class="peculiarities__option-label option">Skateboard shoes</label>
-                        <input type="checkbox" name="peculiarities-skateboard" id="peculiarities-skateboard" class="peculiarities__option-check">
+                    <div class="peculiarities__option option">
+                        <label for="peculiarities-skateboard" class="peculiarities__option-label option-label">Skateboard shoes</label>
+                        <input type="checkbox" name="peculiarities-skateboard" id="peculiarities-skateboard" class="peculiarities__option-check checkbox">
                     </div>
                 </section>
                 <section class="catalog__filter-color">
@@ -99,10 +99,10 @@
                         <div id="color-yellow" class="color__option"></div>
                         <div id="color-orange" class="color__option"></div>
                         <div id="color-green" class="color__option"></div>
-                        <div id="color-black" class="color__option selected"></div>
+                        <div id="color-black" class="color__option"></div>
                         <div id="color-pink" class="color__option"></div>
                         <div id="color-brown" class="color__option"></div>
-                        <div id="color-blue" class="color__option selected"></div>
+                        <div id="color-blue" class="color__option"></div>
                     </div>
                 </section>
                 <section class="catalog__filter-size">
@@ -121,7 +121,7 @@
                         <button class="size__option">24.5</button>
                         <button class="size__option">25</button>
                         <button class="size__option">25.5</button>
-                        <button class="size__option selected">26</button>
+                        <button class="size__option">26</button>
                         <button class="size__option">26.5</button>
                         <button class="size__option">27</button>
                         <button class="size__option">27.5</button>
@@ -134,12 +134,19 @@
                     </div>
                 </section>
                 <div class="catalog__filter-labels">
-                    <button class="labels__option selected">Novelties</button>
+                    <button class="labels__option">Novelties</button>
                     <button class="labels__option">Sale</button>
                 </div>
             </div>
             <div class="catalog__showcase">
-                <div class="sort"></div>
+                <div class="sort">
+                    <select id="sort__select">
+                        <option class="sort__select-item" value="0">Sort by</option>
+                        <option class="sort__select-item" value="1">Price</option>
+                        <option class="sort__select-item" value="2">Name</option>
+                        <option class="sort__select-item" value="3">Popularity</option>
+                    </select>
+                </div>
                 <div class="showcase__items">
                     <div class="showcase__items-item">
                         <div class="item__thumb">
@@ -151,13 +158,13 @@
                         <div class="item__heart"></div>
                     </div>
                 </div>
-            </div>
-            <div class="catalog__pagination">
-                <button class="pagination__item">1</button>
-                <button class="pagination__item">2</button>
-                <button class="pagination__item selected">3</button>
-                <button class="pagination__item">...</button>
-                <button class="pagination__item">16</button>
+                <div class="catalog__pagination">
+                    <button class="pagination__item">1</button>
+                    <button class="pagination__item">2</button>
+                    <button class="pagination__item ">3</button>
+                    <button class="pagination__item">...</button>
+                    <button class="pagination__item">16</button>
+                </div>
             </div>
         </div>
     </div>
