--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </form>
             <div class="catalog__showcase">
                 <div class="sort-wrapper">
-                    <button class="sort__filter-btn"><img src="/assets/svg/filter-logo.svg" alt="filter">Filter</button>
+                    <button class="sort__filter-btn"><img src="assets/svg/filter-logo.svg" alt="filter">Filter</button>
                     <div class="sort">
                         <div class="sort__select">Sort by</div>
                         <ul class="sort__list">
@@ -157,7 +157,7 @@
                 <div class="showcase__items">
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker1.png" alt="sneaker">
+                            <img src="assets/img/sneaker1.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Nike Air Force 1 Medium Blue</a>
                         <p class="item__price">$77.98</p>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker2.png" alt="sneaker">
+                            <img src="assets/img/sneaker2.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">New Balance 574 classic</a>
                         <p class="item__price">$80.34</p>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker3.png" alt="sneaker">
+                            <img src="assets/img/sneaker3.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Nike Air Max 97</a>
                         <p class="item__price">$120.00</p>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker4.png" alt="sneaker">
+                            <img src="assets/img/sneaker4.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">nike air JORDAN 4 RETRO THUNDER</a>
                         <p class="item__price">$104.26</p>
@@ -201,7 +201,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker5.png" alt="sneaker">
+                            <img src="assets/img/sneaker5.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Adidas Gazelle Burgundy</a>
                         <p class="item__price">$80.90</p>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker6.png" alt="sneaker">
+                            <img src="assets/img/sneaker6.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Adidas Yeezy Boost 700 Wave Runner</a>
                         <p class="item__price">$176.00</p>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker7.png" alt="sneaker">
+                            <img src="assets/img/sneaker7.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Nike Air Huarache red</a>
                         <p class="item__price">$108.00</p>
@@ -234,7 +234,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker8.png" alt="sneaker">
+                            <img src="assets/img/sneaker8.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Reebok Classic Leather</a>
                         <p class="item__price">$125.70</p>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker9.png" alt="sneaker">
+                            <img src="assets/img/sneaker9.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Nike LeBron 14 CAVS PE ALTERNATE</a>
                         <p class="item__price">$140.16</p>
@@ -256,7 +256,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker10.png" alt="sneaker">
+                            <img src="assets/img/sneaker10.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">ADIDAS NMD_XR1 PRIMEKNIT BB2376</a>
                         <p class="item__price">$110.26</p>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker11.png" alt="sneaker">
+                            <img src="assets/img/sneaker11.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Jordan 1 Retro Black Royal Blue</a>
                         <p class="item__price">$170.50</p>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="showcase__items-item">
                         <a href="#" class="item__thumb">
-                            <img src="/assets/img/sneaker12.png" alt="sneaker">
+                            <img src="assets/img/sneaker12.png" alt="sneaker">
                         </a>
                         <a href="#" class="item__title">Nike Zoom KD 9 Mic Drop</a>
                         <p class="item__price">$90.35</p>
